force-app/main/default/objects/QA_A_API__c/QA_A_API__c.object-meta.xml
<CustomObject>
    <label>QA_A</label>
    <nameField>
        <label>QA_A Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA_A</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>