force-app/main/default/objects/QA_A_API__c/fields/Account_Number_API__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_API__c</fullName>
    <label>Account Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>