force-app/main/default/objects/QA_A_API__c/fields/Dollar_esela__c.field-meta.xml
<CustomField>
    <fullName>Dollar_esela__c</fullName>
    <formula>$User.CommunityNickname =&apos;esela&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dollar esela</label>
    <type>Checkbox</type>
</CustomField>