force-app/main/default/objects/QA_A_API__c/fields/Global_Picklist_API__c.field-meta.xml
<CustomField>
    <fullName>Global_Picklist_API__c</fullName>
    <label>Global Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Global_BugPriority</valueSetName>
    </valueSet>
</CustomField>