force-app/main/default/objects/QA_A_API__c/fields/In_Development_API__c.field-meta.xml
<CustomField>
    <fullName>In_Development_API__c</fullName>
    <label>In Development</label>
    <length>200</length>
    <type>Text</type>
</CustomField>