force-app/main/default/objects/QA_A_API__c/fields/pick1904_API__c.field-meta.xml
<CustomField>
    <fullName>pick1904_API__c</fullName>
    <description>TestSatellite – There is change in column of Export from satellite with new columns but without data
Please approve that this is OK (Attached is old files and new files)</description>
    <label>pick1904</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>These</fullName>
            </value>
            <value>
                <fullName>are</fullName>
            </value>
            <value>
                <fullName>latest</fullName>
            </value>
            <value>
                <fullName>failures</fullName>
            </value>
            <value>
                <fullName>in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>