force-app/main/default/objects/QA_A_API__c/fields/QA_B_Lookup_API__c.field-meta.xml
<CustomField>
    <fullName>QA_B_Lookup_API__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA_B_Lookup</label>
    <referenceTo>QA_B_API__c</referenceTo>
    <relationshipLabel>QA_A</relationshipLabel>
    <relationshipName>QA_A</relationshipName>
    <type>Lookup</type>
</CustomField>