force-app/main/default/objects/QA_A_API__c/fields/start_screen__c.field-meta.xml
<CustomField>
    <fullName>start_screen__c</fullName>
    <description>first step in flow</description>
    <label>start screen</label>
    <length>200</length>
    <type>Text</type>
</CustomField>