force-app/main/default/objects/QA_A_API__c/fields/Status_API__c.field-meta.xml
<CustomField>
    <fullName>Status_API__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active_API</fullName>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive_API</fullName>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>Panding_API</fullName>
                <label>Panding</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>