force-app/main/default/objects/QA_A_API__c/recordTypes/qa_a_record_type_api.recordType-meta.xml
<RecordType>
    <fullName>qa_a_record_type_api</fullName>
    <active>true</active>
    <description>for qa_a</description>
    <label>qa_a_record_type</label>
</RecordType>